assetz-backend.yml
# create a deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assetz-backend
spec:
  selector:
    matchLabels:
      run: assetz-backend
  replicas: 1
  template:
    metadata:
      labels:
        run: assetz-backend
    spec:
      containers:
      - name: assetz-backend
        image: localhost:32000/assetz/backend:latest
        ports:
        - containerPort: 8080

---
# create a service
apiVersion: v1
kind: Service
metadata:
  name: assetz-backend
  labels:
    run: assetz-backend
spec:
  type: NodePort
  selector:
    run: assetz-backend
  ports:
  - port: 8080
    protocol: TCP
