ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-assetz-ui
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    http:
      paths:
      - path: /
        backend:
          serviceName: assetz-ui
          servicePort: 5000
